# birthday-bot

./: Cargo.toml  README.md  memo.md
src/: deserialize.rs  error.rs  handler.rs  main.rs
