[package]
name = "rust-line-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
actix-rt = "1"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"]}
awc = {version = "3.0.1", features = ["rustls"] }
thiserror = "1.0.51"
rustls = "0.22.1"
actix-tls = "3.1.1"
