[package]
name = "rust-line-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "1"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"]}
awc = {version = "3.0.1", features = ["rustls"] }
thiserror = "1.0.51"
futures-util = "0.3.30"
ring = "0.17.7"
data-encoding = "2.5.0"
